--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = [
     {name = "highlander-95",email = "nogin.pavlo@lll.kpi.ua"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4"
 dependencies = [
-    "django (>=5.2.7,<6.0.0)"
+    "django (>=5.2.7,<6.0.0)",
+    "psycopg[binary] (>=3.2.12,<4.0.0)",
+    "django-environ (>=0.12.0,<0.13.0)"
 ]
 
 
