--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12,<4"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "psycopg[binary] (>=3.2.12,<4.0.0)",
-    "django-environ (>=0.12.0,<0.13.0)"
+    "django-environ (>=0.12.0,<0.13.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)"
 ]
 
 
