--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,17 @@ requires-python = ">=3.12,<4"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "psycopg[binary] (>=3.2.12,<4.0.0)",
-    "django-environ (>=0.12.0,<0.13.0)"
+    "django-environ (>=0.12.0,<0.13.0)",
+    "django-redis (>=6.0.0,<7.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=7.0.1,<8.0.0)",
+    "django-allauth (>=65.13.0,<66.0.0)",
+    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
+    "django-cors-headers (>=4.9.0,<5.0.0)",
+    "django-extensions (>=4.1,<5.0)",
+    "elasticsearch (>=9.2.0,<10.0.0)",
+    "pillow (>=12.0.0,<13.0.0)",
+    "django-versatileimagefield (>=3.1,<4.0)"
 ]
 
 
