--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,5 +33,15 @@ dev = [
     "pylint (>=4.0.2,<5.0.0)",
     "mypy (>=1.18.2,<2.0.0)",
     "flake8 (>=7.3.0,<8.0.0)",
-    "black (>=25.9.0,<26.0.0)"
+    "black (>=25.9.0,<26.0.0)",
+    "django-debug-toolbar (>=6.1.0,<7.0.0)",
+    "pytest (>=9.0.0,<10.0.0)",
+    "pytest-django (>=4.11.1,<5.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "factory-boy (>=3.3.3,<4.0.0)",
+    "isort (>=7.0.0,<8.0.0)",
+    "django-celery-beat (>=2.8.1,<3.0.0)",
+    "flower (>=2.0.1,<3.0.0)",
+    "django-silk (>=5.4.3,<6.0.0)",
+    "codespell (>=2.4.1,<3.0.0)"
 ]
